[gd_scene load_steps=5 format=1]

[ext_resource path="res://scn/off.gd" type="Script" id=1]
[ext_resource path="res://art/off.png" type="Texture" id=2]
[ext_resource path="res://fonts/NaziTypewriterRegular_g.fnt" type="BitmapFont" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[node name="off" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1.89403, 0, 0, 1.79933, 0.349387, 2.41396 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0.349387, 2.41396 )
transform/scale = Vector2( 1.89403, 1.79933 )
shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="tooltip" type="Node2D" parent="."]

[node name="Label" type="Label" parent="tooltip"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -203.0
margin/top = -57.0
margin/right = 14.0
margin/bottom = -16.0
custom_fonts/font = ExtResource( 3 )
text = "Quit game"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="tooltip"]

process_mode = 1
wait_time = 0.7
one_shot = true
autostart = false

[connection signal="input_event" from="." to="." method="_on_off_input_event"]

[connection signal="mouse_enter" from="." to="." method="_on_off_mouse_enter"]

[connection signal="mouse_exit" from="." to="." method="_on_off_mouse_exit"]

[connection signal="timeout" from="tooltip/Timer" to="." method="_on_Timer_timeout"]


